Update implementations
